[tool.poetry]
name = "notion-workspace-manager"
version = "0.1.0"
description = ""
authors = ["Sam Kreter <samkreter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notion-client = "^2.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
